src/ui/components/Toolbox.css
#toolbox {
  overflow: hidden;
  width: 100%;
  font-family: sans-serif;
  display: flex;
  flex-direction: column;
  z-index: 1; /* Draw toolbox in front of the highlighter overlay. */
  --toolbox-background: #f9f9fa;
  --paused-background-color: #5b41ff;
}

#toolbox-timeline {
  height: 58px;
  background: var(--theme-toolbar-background);
  border-top: 1px solid var(--theme-splitter-color);
  border-bottom: 1px solid var(--theme-splitter-color);
}

#toolbox-toolbar {
  height: 35px;
  border-top: 0px;
  background: var(--theme-toolbar-background);
  border-bottom: 1px solid var(--theme-splitter-color);
}

#toolbox-contents {
  height: 100%;
  position: relative;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

/* Split Console styles */
.toolbox-top-panels {
  width: 100%;
}
.toolbox-top-panels .toolbox-panel.active {
  display: block;
}
.toolbox-top-panels .toolbox-panel {
  display: none;
}

/* Toolbar Styles */

.toolbar-panel-button {
  float: left;
  display: flex;
  cursor: default;
  line-height: 35px;
  font-size: 1.1rem;
  color: var(--theme-toolbar-color);
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
}

.toolbar-panel-button:hover {
  background-color: var(--toolbarbutton-focus-background);
}

.toolbar-panel-icon {
  width: 16px;
  height: 17px;
  margin-right: 5px;
}

.toolbar-panel-button.active {
  color: var(--theme-toolbar-selected-color);
}

.toolbar-panel-icon {
  background: var(--theme-toolbar-color);
}

.toolbar-panel-button.active .toolbar-panel-icon {
  background: var(--theme-toolbar-selected-color);
}

.timeline-tooltip {
  display: flex;
  position: absolute;
  height: 180px;
  border: 1px solid rgb(204, 204, 204);
  box-shadow: 2px 1px 1px rgb(227, 227, 227);
  bottom: 10px;
  border-radius: 4px;
  background: #ececec;
  align-items: center;
  justify-content: center;
  z-index: 1;
}

.timeline-tooltip-image {
  height: 100%;
}

